--- a/client/wxapp/pages/orderSettleDetail/orderSettleDetail.wxml
+++ b/client/wxapp/pages/orderSettleDetail/orderSettleDetail.wxml
@@ -12,126 +12,106 @@
 					<text wx:if="{{userOrderinfo.state == 7}}">已取消</text>
 					<text wx:if="{{userOrderinfo.state == 9}}">已退款</text>
 				</view>
+				<view class="foodCode" wx:if="{{userOrderinfo.state == 2 && userOrderinfo.sendType == 1}}">{{userOrderinfo.foodCode}}</view>
 				<view class="countDownBox" wx:if="{{userOrderinfo.state == 0 && userOrderinfo.payState == 0}}">
 					<van-count-down time="{{ time }}" bind:finish="finished" />后订单将自动取消</view>
-				<view class="btnBox btnBox1" wx:if="{{userOrderinfo.state == 0 && userOrderinfo.payState == 0}}">
-					<view class="btn btn1" catchtap="finished">取消订单</view>
-					<view class="btn btn2" catchtap="btnPaymentClick">立即支付</view>
+				<view class="guideTopRight" wx:if="{{userOrderinfo.state == 0 && userOrderinfo.payState == 0}}">
+					<view class="type type1 {{tactive ? 'active' : ''}}" catchtap="finished">
+						取消订单
+					</view>
+					<view class="type type2 {{!tactive ? 'active' : ''}}" catchtap="btnPaymentClick">
+						立即支付
+					</view>
 				</view>
-				<view class="btnBox btnBox2" wx:if="{{userOrderinfo.state == 6 ||userOrderinfo.state == 7||userOrderinfo.state == 9}}">
-					<view class="btn btn3">再来一单</view>
+				<view class="guideTopRight guideTopRight2" wx:if="{{userOrderinfo.state == 6 ||userOrderinfo.state == 7||userOrderinfo.state == 9}}">
+					<view class="type type2 {{userOrderinfo.state == 6 ? '' : 'active'}}" catchtap="btnPayAgainClick">
+						再来一单
+					</view>
 				</view>
 				<!-- 步骤条 -->
-				<view class="stepBox">
+				<view class="stepBox" hidden="{{true}}">
 					<view class="typeSelect">
 						<view class="left title">订单信息</view>
 					</view>
-					<van-steps steps="{{ userOrderinfo.orderProcessList }}" active="{{ active }}" direction="vertical" active-color="#d2aa79" desc-class="desTxt"/>
+					<van-steps steps="{{ userOrderinfo.orderProcessList }}" active="{{ active }}" direction="vertical" active-color="#707070" desc-class="desTxt" />
 				</view>
 				<!-- 配送地址 -->
-				<view class="paymentTypeBox orderAdress commonB" wx:if="{{userOrderinfo.state == 2 && userOrderinfo.sendType == 2}}">
+				<view class="peisongAdress" wx:if="{{userOrderinfo.state == 2 && userOrderinfo.sendType == 2}}">
 					<view class="typeSelect flexBox">
 						<view class="left title">配送小哥</view>
 						<view class="right"></view>
 					</view>
 					<view class="typeSelect flexBox">
 						<view class="left">{{userOrderinfo.orderDetail.deliverName}}</view>
-					</view>
-					<view class="typeSelect flexBox">
-						<view class="left">{{userOrderinfo.orderDetail.deliverMobile}}</view>
-						<view class="right" catchtap="makePhoneCallClick" data-phone="{{userOrderinfo.orderDetail.deliverMobile}}">拨打电话</view>
+						<view class="right" catchtap="makePhoneCallClick" data-phone="{{userOrderinfo.orderDetail.deliverMobile}}">
+								<text class="tel">{{userOrderinfo.orderDetail.deliverMobile}}</text>
+								<image class="iconTel" src="/images/common/icon_tel.png"></image>
+						</view>
 					</view>
 				</view>
 			</view>
 			<!-- 商品列表 -->
 			<view class="cardListBox commonB">
-				<view class="title commonTitle">
-					<image class="storeImg" src="{{userOrderinfo.shopLogoImg}}" lazy-load="{{true}}"></image>
-					{{userOrderinfo.shopname}}>
-				</view>
-				<view class="title commonTitle">商品列表</view>
+				<view class="title commonTitle">{{userOrderinfo.shopname}} ></view>
 				<view class="listContent">
-					<view class="left flexBox">
-						<view wx:for="{{cardList}}" wx:key="index" class="cardDetailListCard">
-							<image class="img" src="{{item.foodCover}}" mode="widthFix"></image>
+					<view class="listContentItem" wx:for="{{cardList}}" wx:key="index">
+						<view class="left flexBox">
+							<view class="cardDetailListCard">
+								<image class="img" src="{{item.foodCover}}" mode="widthFix"></image>
+								<view class="info">
+									<text class="txt1">{{item.foodTitle}}</text>
+									<text class="txt2">{{item.foodSpecsName}}</text>
+									<text class="txt3">￥{{item.realPerPrice}}</text>
+								</view>
+							</view>
+						</view>
+						<view class="right">
+							x{{item.buyNum}}
 						</view>
 					</view>
-					<view class="right" catchtap="showCardListClick">
-						共{{selectInfo.total}}件
-						<text class="iconCommon">></text>
-					</view>
 				</view>
-				<view class="RunningMoney flexBox" wx:if="{{checked}}">
-					<view class="left">配送费</view>
-					<view class="right">
-						<text class="tips">￥{{userOrderinfo.userRunMoney}}</text>
-					</view>
-				</view>
-				<view class="couponBox flexBox" hidden="{{true}}">
-					<view class="left">喜茶券</view>
-					<view class="right">
-						<text class="tips" wx:if="{{userOrderinfo.userCouponNum === 0}}">暂无可用</text>
-						<text class="iconCommon">></text>
-					</view>
+				<view class="totalBox">
+					<text class="icon_money">总计￥{{selectInfo.allPrice}}</text>
 				</view>
 				<view class="remarksBox flexBox">
 					<view class="left">备注</view>
+					<view class="right overtext1">
+						<text class="txt overtext1">{{userOrderinfo.remarksTxt}}</text>
+						<text class="iconCommon">></text>
+					</view>
+				</view>
+				<view class="RunningMoney flexBox flexBox2" wx:if="{{userOrderinfo.state == 2 && userOrderinfo.sendType == 2}}">
+					<view class="left">取餐码</view>
 					<view class="right">
-						{{userOrderinfo.remark}}
-						<text class="iconCommon" hidden="{{true}}">></text>
+						<text class="tips">{{userOrderinfo.foodCode}}</text>
 					</view>
 				</view>
-				<view class="totalBox totalBox1 flexBox">
-					<view class="left">商品总价</view>
-					<view class="right">
-						<text class="icon_money">￥{{(selectInfo.shopAllPrice)}}</text>
+				<!-- 收货地址 -->
+				<view class="paymentTypeBox orderAdress commonB" wx:if="{{userOrderinfo.sendType == 2}}">
+					<view class="typeSelect flexBox">
+						<view class="left title">收货地址</view>
+						<view class="right"></view>
+					</view>
+					<view class="typeSelect flexBox">
+						<view class="left">{{userOrderinfo.orderDetail.userUsername}} {{userOrderinfo.orderDetail.userMobile}}</view>
+					</view>
+					<view class="typeSelect flexBox">
+						<view class="left">{{userOrderinfo.orderDetail.userAddress}} {{userOrderinfo.orderDetail.userStreet}}</view>
 					</view>
 				</view>
-				<view class="totalBox totalBox1 flexBox" wx:if="{{userOrderinfo.sendType == 2}}">
-					<view class="left">配送费</view>
-					<view class="right">
-						<text class="icon_money">￥{{userOrderinfo.sendCost}}</text>
+				<!-- 订单详情 -->
+				<view class="paymentTypeBox orderTime commonB">
+					<view class="typeSelect flexBox">
+						<view class="left title">下单时间</view>
+						<view class="right title">
+							{{userOrderinfo.createTime}}
+						</view>
 					</view>
-				</view>
-				<view class="totalBox">共{{selectInfo.total}}件商品，总计
-					<text class="icon_money">￥{{selectInfo.allPrice}}</text>
-				</view>
-			</view>
-			<!-- 支付方式 -->
-			<view class="paymentTypeBox commonB" hidden="{{true}}">
-				<view class="typeSelect flexBox">
-					<view class="left">支付方式</view>
-					<view class="right">
-						<text class="iconfont icon_wx2" />
-            <text>微信</text>
-					</view>
-				</view>
-			</view>
-			<!-- 收货地址 -->
-			<view class="paymentTypeBox orderAdress commonB" wx:if="{{userOrderinfo.sendType == 2}}">
-				<view class="typeSelect flexBox">
-					<view class="left title">收货地址</view>
-					<view class="right"></view>
-				</view>
-				<view class="typeSelect flexBox">
-					<view class="left">{{userOrderinfo.orderDetail.userUsername}} {{userOrderinfo.orderDetail.userMobile}}</view>
-				</view>
-				<view class="typeSelect flexBox">
-					<view class="left">{{userOrderinfo.orderDetail.userAddress}} {{userOrderinfo.orderDetail.userStreet}}</view>
-				</view>
-			</view>
-			<!-- 订单详情 -->
-			<view class="paymentTypeBox orderTime commonB">
-				<view class="typeSelect flexBox">
-					<view class="left title">下单时间</view>
-					<view class="right title">
-						{{userOrderinfo.createTime}}
-					</view>
-				</view>
-				<view class="typeSelect flexBox">
-					<view class="left title">订单编号</view>
-					<view class="right title">
-						{{userOrderinfo.orderNo}}
+					<view class="typeSelect flexBox">
+						<view class="left title">订单编号</view>
+						<view class="right title">
+							{{userOrderinfo.orderNo}}
+						</view>
 					</view>
 				</view>
 			</view>
