--- a/client/wxapp/pages/orderSettleDetail/orderSettleDetail.wxss
+++ b/client/wxapp/pages/orderSettleDetail/orderSettleDetail.wxss
@@ -1,82 +1,40 @@
 /**标准16:9*/
-page { height: 100%; background-color: #f7f7f7;}
+page { height: 100%; background-color: var(--color24);}
 .article { width: 100%; height: 100%;overflow: hidden;}
-.orderInfoScroll .box .iconCommon{color: #a7a7a7;}
-/* orderInfoScroll */
 .orderInfoScroll{height: 100%;}
-.orderInfoScroll .box{background-color: #f7f7f7;height: 100%;}
-.orderInfoScroll .box .commonB{padding: 32rpx 33rpx 0 33rpx;background-color: #fefefe;margin-bottom: 23rpx;}
-.orderInfoScroll .box .commonB .typeSelect>view{line-height: 1.4;}
-.orderInfoScroll .box .commonB .typeSelect .title{color: #676767;}
-.orderInfoScroll .box .commonB .typeSelect .right{text-align: left;line-height: 1.4;}
-.orderInfoScroll .box .commonTitle{font-size: 30rpx;font-weight: 700;padding-bottom: 40rpx;}
-.orderInfoScroll .box .commonTitle .storeImg{width: 40rpx;height: 40rpx;vertical-align: middle;}
-
+.orderInfoScroll .box .iconCommon{color: #a7a7a7;}
+.orderInfoScroll .box .commonB{padding-top: 35rpx;}
+.orderInfoScroll .box{border-top: 1rpx solid transparent;}
+.orderInfoScroll .box .cardListBox .remarksBox .iconCommon{padding-left: 30rpx;}
+.orderInfoScroll .box .cardListBox .flexBox2{ justify-content: flex-start;font-size: 24rpx;color:var(--color28);}
+.orderInfoScroll .box .cardListBox .flexBox2 .right{color: var(--color27);padding-left: 50rpx;font-size: 30rpx;}
+.orderInfoScroll .box .commonB .typeSelect{justify-content: flex-start;}
+.orderInfoScroll .box .commonB .typeSelect>view{color:var(--color28);font-size: 24rpx;margin-bottom: 20rpx;}
+.orderInfoScroll .box .commonB .typeSelect .title{}
+.orderInfoScroll .box .commonB .typeSelect .right{text-align: left;}
+.orderInfoScroll .box .commonTitle{padding-left: 15rpx;}
 /* orderRedaus */
-.orderRedaus{background-color: #fefefe;margin-bottom: 23rpx;padding-bottom: 23rpx;}
-.orderRedaus .orderStatusInfo{text-align: center;font-size: 30rpx;color: #d2aa79;padding: 30rpx;}
-.orderRedaus .countDownBox{text-align: center;}
-.orderRedaus .countDownBox .van-count-down{display: inline-block;margin-right: 10rpx;}
-.orderRedaus .btnBox{display:flex;justify-content: space-between;align-items: center;width: 100%;margin: 30rpx auto;padding: 0 200rpx;}
-.orderRedaus .btnBox .btn{font-size: 24rpx;width: 146rpx;height: 56rpx;margin-top: 36rpx;border: 1rpx solid #d2ad7d;text-align: center;color: #d2ad7d;line-height: 56rpx;}
-.orderRedaus .btnBox2 {justify-content: center;width: auto;}
+.orderRedaus{background-color: var(--white);width: 713rpx;height: auto;border-top-left-radius: 30rpx;border-top-right-radius: 30rpx;margin: 35rpx auto 0;box-shadow:1rpx 0px 15rpx var(--color32);padding-bottom: 40rpx;}
+.orderRedaus .orderStatusInfo{text-align: center;font-size: 32rpx;color: var(--color3);padding: 50rpx 30rpx 0rpx;}
+.orderRedaus .countDownBox{text-align: center;color: var(--color11);font-size:32rpx;}
+.orderRedaus .countDownBox .van-count-down{display: inline-block;color: var(--color11);font-size:32rpx;}
+.orderInfoScroll .guideTopRight {height: auto;margin: 80rpx auto 0;}
+.orderInfoScroll .guideTopRight .type {width: 330rpx;height: 122rpx;}
+.orderInfoScroll .guideTopRight2{justify-content: center;}
+
+
 .orderRedaus .stepBox{font-size: 24rpx;}
 .orderRedaus .stepBox .desTxt{font-size: 24rpx;}
 .orderRedaus .stepBox .title{font-size: 28rpx;color: #676767;padding-left: 30rpx;}
 
+.orderInfoScroll .box .orderAdress{padding-top: 30rpx;}
+.orderInfoScroll .box .orderAdress .typeSelect:nth-child(2)>.left,.orderInfoScroll .box .orderAdress .typeSelect:nth-child(3)>.left{color: var(--color25);}
+.orderInfoScroll .box .paymentTypeBox{padding: 45rpx 0 0 15rpx;border-top: 1rpx solid var(--color44);}
 
-/* 取茶时间 */
-.orderInfoScroll .box .getFoodTimeBox {padding-bottom: 32rpx;display: none;}
-.orderInfoScroll .box .getFoodTimeBox .txt{font-size: 30rpx;text-align: left;}
-.orderInfoScroll .box .getFoodTimeBox .txt1{color: #d3ab7b;}
-.orderInfoScroll .box .getFoodTimeBox .txt2{color:#676767;}
-.orderInfoScroll .box .getFoodTimeBox .progressBox{margin-top: 30rpx;width: 100%;height: 28rpx;border-radius: 15rpx;background-color: #f7f7f7;}
-.orderInfoScroll .box .getFoodTimeBox .progress{width: 0%;height: 100%;background-color: #afd58d;border-radius: 15rpx;}
+/* peisongAdress */
+.orderInfoScroll .box .peisongAdress{padding: 80rpx 52rpx 0 52rpx; }
+.orderInfoScroll .box .peisongAdress .typeSelect{justify-content: space-between;font-size: 30rpx;color: var(--color31);}
+.orderInfoScroll .box .peisongAdress .typeSelect:last-child{color: var(--color27);margin-top: 20rpx;}
+.orderInfoScroll .box .peisongAdress .iconTel{vertical-align: middle;display: inline-block;margin-left: 23rpx;width: 50rpx;height: 50rpx;}
 
-/* 商品列表 */
-.orderInfoScroll .box .flexBox{display: flex;justify-content: space-between;align-items: center;}
-.orderInfoScroll .box .cardListBox .listContent{height: 160rpx;border-bottom: 1px solid #f1f1f1;display: flex;justify-content: space-between;align-items: center; margin-bottom: 50rpx;}
-.orderInfoScroll .box .cardListBox .listContent>view{height: 100%;}
-.orderInfoScroll .box .cardListBox .listContent .left{width: 540rpx;justify-content: flex-start;}
-.orderInfoScroll .box .cardListBox .listContent .right{width: calc(100% - 540rpx);line-height: 160rpx;font-size: 30rpx;text-align: center;}
-.orderInfoScroll .box .cardListBox .flexBox{ margin-bottom: 50rpx;font-size: 30rpx;}
-.orderInfoScroll .box .cardListBox .couponBox .tips{color: #cacaca;}
-/* totalBox */
-.orderInfoScroll .box .cardListBox .totalBox{padding-bottom: 44rpx;font-size: 30rpx;color:#676767;text-align: right;}
-.orderInfoScroll .box .cardListBox .totalBox .icon_money{font-weight: 700;color: #000;font-size: 35rpx;}
-.orderInfoScroll .box .cardListBox .totalBox1{margin-bottom: 0;}
-
-/* cardDetailListCard */
-.orderInfoScroll .box .cardDetailListCard{width: 20%;margin-right: 35rpx;}
-.orderInfoScroll .box .cardDetailListCard .img{width: 100%;height: auto;}
-
-/* orderMoneyBox */
-.orderMoneyBox{height: 100rpx;background-color: #fefefe;border-top: 1px solid #f1f1f1;display: flex;justify-content: flex-end;align-items: center;}
-.orderMoneyBox .totalBox{padding-bottom: 0;}
-.orderMoneyBox .btnPayment{width: 240rpx;height: 100%;line-height: 100rpx;background-color: #d2aa79;text-align: center;color: #fff;margin-left: 40rpx;}
-
-/* 支付方式 */
-.orderInfoScroll .box .paymentTypeBox{padding: 32rpx 33rpx;font-size: 30rpx;}
-.orderInfoScroll .box .paymentTypeBox .icon_wx2{margin-right: 17rpx;color: #70bf58;}
-/* 2行超出截断 */
-.overtext2 { overflow: hidden; text-overflow: ellipsis; display: -webkit-box; -webkit-box-orient: vertical; -webkit-line-clamp: 2;}
-
-/* popup_cardDetailList */
-.popup_cardDetailList {background-color: #fff;height: 850rpx;box-sizing: border-box;}
-.popup_cardDetailList .topBar {height: 92rpx;display: flex;justify-content: space-between;align-items: center;padding: 0 33rpx;border-bottom: 1px solid #f1f1f1;}
-.popup_cardDetailList .topBar .colse{color: #7e7e7e;width: 50rpx;height: 50rpx;text-align: center;}
-.popup_cardDetailList .topBar .title{font-size: 32rpx;text-align:center;}
-.popup_cardDetailList .topBar .totalNum{color: #7e7e7e;}
-.popup_cardDetailList .scrollList{height: calc(100% - 102rpx);}
-.popup_cardDetailList .scrollList .popup_Scroll{height: 100%;}
-.popup_Scroll .cardDetailListCard{height: 175rpx;display: flex;justify-content: space-between;align-items: center;margin: 0 36rpx;box-sizing: border-box;border-bottom: 1px solid #f1f1f1;}
-.popup_Scroll .cardDetailListCard .cardDetailListCardLeft {text-align: center;width: 180rpx;}
-.popup_Scroll .cardDetailListCard .cardDetailListCardLeft .img{width: 120rpx;}
-.popup_Scroll .cardDetailListCard .cardDetailListCardRight{flex-grow: 1;display: flex;justify-content: space-between;align-items: flex-start;font-size: 30rpx; }
-.popup_Scroll .cardDetailListCard .cardDetailListCardRight .right{text-align: right;padding-left: 20rpx;}
-.popup_Scroll .cardDetailListCard .cardDetailListCardRight .left{max-width: 380rpx;}
-.popup_Scroll .cardDetailListCard .cardDetailListCardRight .left view:last-child,
-.popup_Scroll .cardDetailListCard .cardDetailListCardRight .right text:last-child{color: #7e7e7e;font-size: 26rpx;}
-
-/* noticeBar */
-.noticeBar{font-size: 26rpx!important;}
+.orderInfoScroll .box .foodCode{color:  var(--color3);font-size: 52rpx;text-align: center;padding: 34rpx 0;}
